# rust-random-quotes

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  build.rs  cargo-maelstrom.toml  config.example.toml  maelstrom-test.toml
.github/actions/calculate-tag/: action.yaml
.github/actions/setup-docker/: action.yaml
.github/workflows/: build.yaml  lint.yaml  test.yaml
.run/: Test.run.xml
configs/: config.example.toml
containers/: database.yml  service.yml
docs/: quotes.yaml  sequence_diagram.d2  workflow.d2
migration/: Cargo.toml
migration/src/: lib.rs  m1716794372_create_quotes_table.rs  m1716794403_create_views_table.rs  m1716796965_alter_quotes_table.rs  main.rs
proto/: quotes.proto
requests/: Quotes.http  Quotes.postman_collection.json  yaak.quotes.json
src/: lib.rs  main.rs
src/actix_server/: handlers.rs  mod.rs  structs.rs
src/app/: mod.rs
src/config/: cfg.rs  mod.rs
src/database/: errors.rs  mod.rs  seaorm.rs
src/database/structs/: goose_db_version.rs  mod.rs  prelude.rs  quotes.rs  views.rs
src/heartbeat/: mod.rs  service.rs
src/quote/: mod.rs  service.rs  structs.rs  traits.rs
src/quote_api/: mod.rs  service.rs  structs.rs  traits.rs
src/quoteapi/: mod.rs  service.rs  structs.rs
src/server/: actix_handlers.rs  axum_handlers.rs  grpc_handlers.rs  handlers.rs  mod.rs  rocket_handlers.rs  srv.rs
src/server/graphql/: mod.rs  quotes.rs  quotes_resolver.rs
src/server/proto/: quotes.rs
tests/: integration_test.rs
