[package]
name = "quotes-rs"
version = "0.1.0"
publish = false
edition = "2021"
build = "build.rs"

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
ulid = "1.1.3"
migration = { path = "migration" }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
config = "0.15.4"
rocket_cors = "0.6.0"
async-trait = "0.1.83"
log = "0.4.22"
thiserror = "2.0.9"
rand = "0.8.5"
reqwest = "0.12.12"
serde_json = "1.0.134"
mockall = "0.13.1"
fake = { version = "3.1.0", features = ["derive", "uuid"] }
enclose = "1.2.0"
mockito = "1.6.1"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
actix-web = "4.9.0"
env_logger = "0.11.6"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13"
juniper = "0.16.1"
juniper_actix = "0.6.0"
juniper_rocket = "0.9.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[build-dependencies]
tonic-build = "0.12.3"
