[package]
name = "quotes-rs"
version = "0.1.0"
publish = false
edition = "2021"
build = "build.rs"

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
rocket_cors = "0.6.0"
async-trait = "0.1.88"
log = "0.4.27"
rand = "0.9.2"
reqwest = "0.12.22"
serde_json = "1.0.141"
mockall = "0.13.1"
fake = { version = "4.3.0", features = ["derive", "uuid"] }
enclose = "1.2.1"
mockito = "1.7.0"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
actix-web = "4.11.0"
env_logger = "0.11.8"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
prost = "0.13.5"
juniper = "0.16.2"
juniper_actix = "0.6.0"
juniper_rocket = "0.9.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["timeout", "trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenvy = "0.15.7"
envconfig = "0.11.0"

[build-dependencies]
tonic-build = "0.13.1"
